# dependabot_python_lower_bound_test

./: LICENSE.txt  README.md  pyproject.toml
src/python_package_template/: app.py
tests/: test_app.py
